tests/ui/fail/duplicate_secret_attr.rs
fn main() {}

microtype::microtype! {
    #[secret]
    #[secret]
    String {
        Password
    }
}
