tests/ui/fail/duplicate_secret_attr.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
 --> tests/ui/fail/duplicate_secret_attr.rs:5:5
  |
5 |     #[secret]
  |     ^
  |
help: change the delimiters to curly braces
  |
5 |     {}[secret]
  |     ~
help: add a semicolon
  |
5 |     #;[secret]
  |      +

error: duplicate `secret` attribute found
 --> tests/ui/fail/duplicate_secret_attr.rs:5:5
  |
5 |     #[secret]
  |     ^
